# c_examples

./: do_while.c  floats_as_hex  floats_as_hex.c  for_loop  for_loop.c  function_returntype.c  functions_noreturn  functions_noreturn.c  goto_break_continue  goto_break_continue.c  switch  switch.c
Functions_Headers/: Lesson7.c  Lesson7.h  Lesson7h.c  a.out
built_in_functions/: address_of.c  array_of_pointers  array_of_pointers.c  declaring_pointers  dereference_operator  generic_pointers  generic_pointers.c  pointer_arithmetic  pointer_arithmetic.c  pointers_arrays  pointers_arrays.c  pointers_functions  pointers_functions.c  pointers_strings  pointers_strings.c  pointing_to_pointers  pointing_to_pointers.c  printf  printf.c
data_structures/: 2d_arrays  2d_arrays.c  arrays  arrays.c  declaring_structures  declaring_structures.c  manipulating_strings  manipulating_strings.c  nested_structures  nested_structures.c  pointing_to_structures  pointing_to_structures.c  strings_char_arrays  strings_char_arrays.c  structures_and_bit_fields  structures_and_bit_fields.c  structures_arrays  structures_arrays.c  structures_functions  structures_functions.c
katas/calculate_stats/src/: CMakeLists.txt  Makefile  calculate_stats  calculate_stats.c  calculate_stats.h  cmake_install.cmake  main  main.c
katas/calculate_stats/tests/: CMakeLists.txt  Makefile  calculate_stats_tests.c  check_calculate_stats  check_calculate_stats.c  cmake_install.cmake
preprocessor_optimisation/: conditional_compilation  conditional_compilation.c  debugging_c_programs  debugging_c_programs.c  (+21 more)
(+67 files in other folders)
